style correction from font wrap to swap , add new image and font for next lesson

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 @font-face {
     font-family: "Muller Regular";
-    font-display: wrap;
+    font-display: swap;
     src: url(../Fonts/MullerRegular.woff) format("woff");
     src: url(../Fonts/MullerRegular.woff2) format("woff2");
     font-weight: 500;
